--- a/introduction/hardware.tex
+++ b/introduction/hardware.tex
@@ -1,1 +1,5 @@
-\subsubsection{Hardware}
+\subsubsection*{Hardware}
+\paragraph{Labs}
+  The lab machines we ran our code on have an Intel Core i5 650 3.2GHz processor and a  GeForce GT 330 CUDA enabled graphics card with compute capability 1.0.
+\paragraph{CX1}
+  The CX1 machine has...
