--- a/introduction/software.tex
+++ b/introduction/software.tex
@@ -1,1 +1,7 @@
-\subsubsection{Software}
+\subsubsection*{Software}
+The softwares we have made use of on both lab machines and cx1 are:
+\begin{itemize}
+  \item \textbf{CUDA Compiler Driver NVCC} which ...
+  \item \textbf{CUDA Command Line Profiler}
+  \item \textbf{Python} for scripting of both profiled results and benchmark scores
+\end{itemize}
