Written a hypothesis section

--- a/misc/bib.bib
+++ b/misc/bib.bib
@@ -1,3 +1,24 @@
 @misc{pragmatic,
   howpublished = {\url{https://launchpad.net/pragmatic}},
   title = {{D}ynamic {M}esh {A}daptation {P}roject}}
+
+@misc{gpgpu,
+  howpublished = {\url{http://en.wikipedia.org/wiki/GPGPU}},
+  title = {{W}ikipedia {GPGPU}}}
+
+@misc{cuda_guide,
+  howpublished = {\url{http://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html}},
+  title = {{CUDA} {C} {P}rogramming {G}uide}}
+
+@misc{transfer,
+  howpublished = {\url{https://developer.nvidia.com/content/how-optimize-data-transfers-cuda-cc}},
+  title = {{H}ow {T}o {O}ptimise {D}ata {T}ransfers {I}n {CUDA} {C/C++}}
+}
+
+@misc{lec7,
+  Author = {George Rokos},
+  Institution = {Imperial College London},
+  Howpublished = {University Lecture},
+  Year = {2013},
+  Title = {{AMD}'s {C}ayman {A}rchitecture}
+}
