Added advantages section, also remove accidental add of report

--- a/misc/bib.bib
+++ b/misc/bib.bib
@@ -15,6 +15,11 @@
   title = {{H}ow {T}o {O}ptimise {D}ata {T}ransfers {I}n {CUDA} {C/C++}}
 }
 
+@misc{best_practices,
+  howpublished = {\url{http://docs.nvidia.com/cuda/cuda-c-best-practices-guide/index.html}},
+  title = {{CUDA} {C} {B}est {P}ractices {G}uide}
+}
+
 @misc{lec7,
   Author = {George Rokos},
   Institution = {Imperial College London},
