--- a/potential_advantage/advantage.tex
+++ b/potential_advantage/advantage.tex
@@ -1,1 +1,3 @@
 \section*{The Potential Advantage}
+We evaluated and came up with potential advantages through profling the code on the GPU before and after iterations.
+We also made great use of the Cuda C Best Practices Guide\cite{best_practices} which priorities (high, medium, low) optimisations that you can make on a GPU.
