Written up some results

--- a/effectiveness/effectiveness.tex
+++ b/effectiveness/effectiveness.tex
@@ -1,1 +1,6 @@
 \section*{Effectiveness}
+Experimentally we will run our results three times and average them to deduce what effect they have on the benchmark.
+\input{effectiveness/original}
+\input{effectiveness/gpu}
+\input{effectiveness/remove_corner_nodes}
+\input{effectiveness/reordering}
