--- a/introduction/hardware.tex
+++ b/introduction/hardware.tex
@@ -1,5 +1,14 @@
 \subsubsection*{Hardware}
 \paragraph{Labs}
-  The lab machines we ran our code on have an Intel Core i5 650 3.2GHz processor and a  GeForce GT 330 CUDA enabled graphics card with compute capability 1.0.
-\paragraph{CX1}
-  The CX1 machine has...
+  The lab machines we ran our code on have an Intel Core i5 650 3.2GHz processor and a  GeForce GT 330 CUDA enabled graphics card with compute capability 1.0. This means that a multiprocesor consists of\cite{compute_1.0}:
+  \begin{itemize}
+    \item 8 CUDA cores for arithmetic operations
+    \item 2 special function units for single-precision floating-point transcendental functions (these units can also handle single-precision floating-point multiplications)
+    \item 1 warp scheduler
+  \end{itemize}
+  To execute an instruction for all threads of a warp, the warp scheduler must therefore issue the instruction over:
+  \begin{itemize}
+    \item 4 clock cycles for an integer or single-precision floating-point arithmetic instruction,
+    \item 16 clock cycles for a single-precision floating-point transcendental instruction.
+  \end{itemize}
+  A multiprocessor also has a read-only constant cache that is shared by all functional units and speeds up reads from the constant memory space, which resides in device memory.
