--- a/misc/bib.bib
+++ b/misc/bib.bib
@@ -19,6 +19,22 @@
   howpublished = {\url{http://docs.nvidia.com/cuda/cuda-c-best-practices-guide/index.html}},
   title = {{CUDA} {C} {B}est {P}ractices {G}uide}
 }
+@misc{const_mem,
+  howpublished = {\url{http://wwwae.ciemat.es/~cardenas/CUDA/T6-ConstantMemory.pdf}},
+  title = {{CUDA} {C}onstant {M}emory}
+}}
+
+@misc{half_warp_broadcast,
+  howpublished = {\url{http://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html#device-memory-accesses}},
+  title = {{CUDA} {D}evice {M}emory {A}ccess}
+}
+
+@misc{compute_1.0,
+  howpublished = {\url{http://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html#compute-capability-1-x}},
+  title = {{CUDA} {C}opute {C}apability 1.0}
+}
+
+
 
 @misc{lec7,
   Author = {George Rokos},
