--- a/effectiveness/original.tex
+++ b/effectiveness/original.tex
@@ -1,6 +1,6 @@
 \subsection*{Original Code}
 The original code can be run on lab machines and gives the following results.\\
-\begin{tabular}{ l | l }
+\begin{figure}[H]\centering \begin{tabular}{ l | l }
   \hline
   Size & Average Over Three Time \\
   \hline
@@ -8,4 +8,4 @@ The original code can be run on lab machines and gives the following results.\\
   small & 9.33s \\
   medium & TODO \\
   \hline
-\end{tabular}
+\end{tabular} \end{figure}
