--- a/effectiveness/remove_corner_nodes.tex
+++ b/effectiveness/remove_corner_nodes.tex
@@ -1,6 +1,6 @@
 \subsection*{Removing corner nodes from processing}
 We first remove corner nodes to try reduce the branching amount\\
-\begin{tabular}{ l | l }
+\begin{figure}[H]\centering \begin{tabular}{ l | l }
   \hline
   Size & Average Over Three Time \\
   \hline
@@ -8,10 +8,10 @@ We first remove corner nodes to try reduce the branching amount\\
   small & 2.08s \\
   medium & 14.65 \\
   \hline
-\end{tabular}
+\end{tabular} \end{figure}
 
 We then profile for small.vtk to see what effect this has made.\\
-\begin{tabular}{ l | l | l | l}
+\begin{figure}[H]\centering \begin{tabular}{ l | l | l | l}
 \hline
 Test & Average & Min & Max \\
 \hline
@@ -28,6 +28,6 @@ gld\_coherent & 137409.87 & 1470.00 & 250239.00 \\
 gld\_64b & 9981.73 & 0.00 & 19780.00 \\
 instructions & 38571.64 & 5167.00 & 80180.00 \\
 \hline
-\end{tabular}
+\end{tabular} \end{figure}
 
 Interestingly this has not reduced the number of divergent branches, since it is likely that most corner nodes are sequentially ordered together so form an entire warp.
