--- a/introduction/background.tex
+++ b/introduction/background.tex
@@ -2,5 +2,4 @@ We have been provided with a piece of code that concerns a computational kernel 
 The aim of this series of experiments was to figure out how to run this program as fast as possible on a given architecture.
 
 We have been given access to the HPC's PC cluster to run the results of our experiment on.
-Since the HPC system uses the PBS Pro queuing system to manage the execution of jobs on the compute resources it can often take some time to run a single result.
-Since our project predomenantly involved porting the code to the GPU we also developed our code on the lab machines.
+Since the HPC system uses the PBS Pro queuing system to manage the execution of jobs on the compute resources it can often take some time to run a single result. The wait times can be up to twenty minutes for a single job and unfortunately we have deemed it infeasible to develop for cx1. We will therefore optimise for the lab machine detailed in further sections.
