QUick pinning explanation

--- a/effectiveness/effectiveness.tex
+++ b/effectiveness/effectiveness.tex
@@ -4,3 +4,4 @@ Experimentally we will run our results three times and average them to deduce wh
 \input{effectiveness/gpu}
 \input{effectiveness/remove_corner_nodes}
 \input{effectiveness/reordering}
+\input{effectiveness/pinning}
