--- a/misc/bib.bib
+++ b/misc/bib.bib
@@ -33,6 +33,10 @@
   howpublished = {\url{http://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html#compute-capability-1-x}},
   title = {{CUDA} {C}opute {C}apability 1.0}
 }
+@misc{compute_2.0,
+  howpublished = {\url{http://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html#compute-capability-2-x}},
+  title = {{CUDA} {C}opute {C}apability 2.0}
+}
 
 
 
