--- a/group_work/group_work.tex
+++ b/group_work/group_work.tex
@@ -1,1 +1,28 @@
 \section*{Group Work}
+\begin{tabular}{|p{5.5cm}| p{5.5cm} | p{5.5cm} |}
+  \hline
+  Sarah & Jack & Wael\\
+  \hline
+  \hline
+  \begin{itemize}
+    \item Wrote colouring and reordering algorithms.
+    \item Contributed to porting the code to the GPU using CUDA.
+    \item Implemented the removal of corner nodes.
+    \item Implemented the pinning of Mesh and color data.
+    \item Wrote useful Python scripts to parse profiler results and benchmark results.
+  \end{itemize} &
+
+  \begin{itemize}
+    \item Contributed to porting the code to the GPU using CUDA.
+    \item Implemented and researched the thread sizing.
+    \item Wrote useful bash scripts for cx1 before we decided to scrap the use of it.
+    \item Wrote useful bash scripts for frequently done tasks.
+    \item Researched into batching data which unfortunately we could not get to work.
+  \end{itemize} &
+
+  \begin{itemize}
+    \item Implemented a SQLite 3 database for result storage.
+    \item \ldots
+  \end{itemize} \\
+  \hline
+\end{tabular}
