Modify charts to remove seconds

--- a/effectiveness/gpu.tex
+++ b/effectiveness/gpu.tex
@@ -2,10 +2,10 @@
 Once the verticies have been colored and the code migrated to the GPU the initial results are as follows.\\
 \begin{figure}[H]\centering \begin{tabular}{ l | l }
   \hline
-  Size & Average Over Three Time \\
+  Size & Average Over Three Time (s) \\
   \hline
   \hline
-  small & 2.18s \\
+  small & 2.18 \\
   medium & 14.99 \\
   \hline
 \end{tabular} \end{figure}
