--- a/effectiveness/original.tex
+++ b/effectiveness/original.tex
@@ -2,10 +2,10 @@
 The original code can be run on lab machines and gives the following results.\\
 \begin{figure}[H]\centering \begin{tabular}{ l | l }
   \hline
-  Size & Average Over Three Time \\
+  Size & Average Over Three Time (s) \\
   \hline
   \hline
-  small & 9.33s \\
+  small & 9.33 \\
   medium & TODO \\
   \hline
 \end{tabular} \end{figure}
