--- a/effectiveness/pinning.tex
+++ b/effectiveness/pinning.tex
@@ -2,10 +2,10 @@
 With a pinning pre-processing step (which simulates the host always using pinned data), we avoid the cost of of the transfer between pageable and pinned host memory and see the following speed up.
 \begin{figure}[H]\centering \begin{tabular}{ l | l }
   \hline
-  Size & Average Over Three Time \\
+  Size & Average Over Three Time (s) \\
   \hline
   \hline
-  small & 2.05s \\
+  small & 2.05 \\
   medium & 14.64 \\
   \hline
 \end{tabular} \end{figure}
