--- a/effectiveness/remove_corner_nodes.tex
+++ b/effectiveness/remove_corner_nodes.tex
@@ -2,10 +2,10 @@
 We first remove corner nodes to try reduce the branching amount\\
 \begin{figure}[H]\centering \begin{tabular}{ l | l }
   \hline
-  Size & Average Over Three Time \\
+  Size & Average Over Three Time (s)\\
   \hline
   \hline
-  small & 2.08s \\
+  small & 2.08 \\
   medium & 14.65 \\
   \hline
 \end{tabular} \end{figure}
