--- a/effectiveness/reordering.tex
+++ b/effectiveness/reordering.tex
@@ -2,10 +2,10 @@
 We then reordered the colours into an ordering based upon neighbour size and observed the following results\\
 \begin{figure}[H]\centering \begin{tabular}{ l | l }
   \hline
-  Size & Average Over Three Time \\
+  Size & Average Over Three Time (s) \\
   \hline
   \hline
-  small & 2.15s \\
+  small & 2.15 \\
   medium & 15.23 \\
   \hline
 \end{tabular} \end{figure}
