--- a/effectiveness/original.tex
+++ b/effectiveness/original.tex
@@ -6,6 +6,6 @@ The original code can be run on lab machines and gives the following results.\\
   \hline
   \hline
   small & 9.33 \\
-  medium & TODO \\
+  medium & 69.70 \\
   \hline
 \end{tabular} \end{figure}
