Add a bit more of an explanation to GPU results

--- a/effectiveness/original.tex
+++ b/effectiveness/original.tex
@@ -9,3 +9,5 @@ The original code can be run on lab machines and gives the following results.\\
   medium & 69.70 \\
   \hline
 \end{tabular} \end{figure}
+
+The is a good benchmark for us to work on and will be used in the final results to assess our overall speedup.
