--- a/effectiveness/gpu.tex
+++ b/effectiveness/gpu.tex
@@ -1,5 +1,5 @@
 \subsection*{GPU}
-Once the verticies have been colored and the code migrated to the GPU the initial results are as follows.\\
+Once the verticies have been colored and the code migrated to the GPU results we see are as follows.\\
 \begin{figure}[H]\centering \begin{tabular}{ l | l }
   \hline
   Size & Average Over Three Time (s) \\
@@ -10,7 +10,9 @@ Once the verticies have been colored and the code migrated to the GPU the initia
   \hline
 \end{tabular} \end{figure}
 
-As we can see, moving the code to the GPU and parallelising it makes a huge difference to the performance of this algorithm.
+As we can see, moving the code to the GPU and parallelising it through colouring makes a huge difference to the performance of this algorithm. Since the GPU has 8 cores and 2 special purpose function units it can run up to 16 threads in parallel and because each vertex smoothing is performed on a single thread it can make use of this expanded parallelism. The i5 CPU on the other hand only has four cores of which two threads can be run at a time so if we had parallelised for the CPU the liklihood is the result would not have been as good. There are normally a great many more than sixteen threads that need running during a color iteration which means that we will have many warps (32 threads); when one warp is blocked, the scheduler can schedule another to run making full use of the GPU's resources and reducing any idle time.
+The trade off here is that individual thread completion times are decreased me we have increased throughput through the system, which benefits this algorithm significantly.
+
 From profiling the small.vtk run we can gather the following statistics as a benchmark to start from:\\
 \begin{figure}[H]\centering \begin{tabular}{ l | l | l | l}
 \hline
@@ -27,4 +29,4 @@ divergent\_branch & 83.44 & 7.00 & 185.00 \\
 \hline
 \end{tabular} \end{figure}
 
-From profiling we can see that the warps have very high average devergent which leads us nicely onto the next topic of reordering.
+From profiling we can see that the warps have very high average devergent meaning that threads within a warp diverge frequently. This, as explained in the hypothesis, can be a major area for performanc improvment and so in the next two improvements we try to focus on this.
