Wrote up broken profiler

--- a/misc/bib.bib
+++ b/misc/bib.bib
@@ -36,6 +36,9 @@
 @misc{compute_2.0,
   howpublished = {\url{http://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html#compute-capability-2-x}},
   title = {{CUDA} {C}opute {C}apability 2.0}
+}@misc{so_profiler,
+  howpublished = {\url{http://stackoverflow.com/questions/15190093/cuda-4-2-command-line-profiler-not-working}},
+  title = {{S}tack {O}verflow {P}rofiler {Q}uestion}
 }
 
 
