--- a/report.tex
+++ b/report.tex
@@ -8,6 +8,7 @@
 \maketitle            % generates the title from the data above
 
 \pagebreak
+\tableofcontents
 
 \input{introduction/introduction}
 \input{hypothesis/hypothesis}
@@ -21,5 +22,6 @@
 % entries appear in order of citation
 \bibliographystyle{unsrt}
 
+\input{appendix/appendix}
 
 \end{document}
