Add more profiler results

--- a/effectiveness/gpu.tex
+++ b/effectiveness/gpu.tex
@@ -19,13 +19,17 @@ From profiling the small.vtk run we can gather the following statistics as a ben
 Test & Average & Min & Max \\
 \hline
 \hline
-gld\_request & 16193.80 & 418.00 & 32424.00 \\
-gputime & 1402.99 & 149.63 & 2170.59 \\
+gld\_request & 16306.99 & 418.00 & 32424.00 \\
+gputime & 1402.89 & 151.14 & 2175.65 \\
 occupancy & 0.22 & 0.03 & 0.25 \\
-gst\_request & 168.29 & 2.00 & 384.00 \\
-cputime & 1430.26 & 165.00 & 2703.00 \\
-branch & 1627.76 & 214.00 & 3372.00 \\
-divergent\_branch & 83.44 & 7.00 & 185.00 \\
+gst\_request & 169.75 & 2.00 & 384.00 \\
+cputime & 1424.07 & 166.00 & 2685.00 \\
+branch & 1636.28 & 214.00 & 3198.00 \\
+divergent\_branch & 83.88 & 7.00 & 177.00 \\
+gld\_32b & 98201.77 & 1470.00 & 171740.00 \\
+gld\_coherent & 136918.82 & 1470.00 & 250401.00 \\
+gld\_64b & 9956.15 & 0.00 & 19773.00 \\
+instructions & 37986.54 & 5171.00 & 71584.00 \\
 \hline
 \end{tabular} \end{figure}
 
