--- a/effectiveness/remove_corner_nodes.tex
+++ b/effectiveness/remove_corner_nodes.tex
@@ -35,4 +35,4 @@ instructions & 38571.64 & 5167.00 & 80180.00 \\
 \hline
 \end{tabular} \end{figure}
 
-Interestingly this has not reduced the number of divergent branches, since it is likely that most corner nodes are sequentially ordered together so form an entire warp.
+Although this looks to have not reduced the number of divergent branches, this is likely to come from the fact that we now have less warps. [TODO EXPLAIN PROFILER RESULTS]
