Added thread_size results and started batch transfer hypothesis

--- a/effectiveness/effectiveness.tex
+++ b/effectiveness/effectiveness.tex
@@ -5,3 +5,4 @@ Experimentally we will run our results three times and average them to deduce wh
 \input{effectiveness/remove_corner_nodes}
 \input{effectiveness/reordering}
 \input{effectiveness/pinning}
+\input{effectiveness/thread_size}
