--- a/group_work/group_work.tex
+++ b/group_work/group_work.tex
@@ -14,10 +14,9 @@
 
   \begin{itemize}
     \item Contributed to porting the code to the GPU using CUDA.
-    \item Implemented and researched the thread sizing.
+    \item Implemented and researched threads per block.
+    \item Implemented and researched batch data transfer from host to device.
     \item Wrote useful bash scripts for cx1 before we decided to scrap the use of it.
-    \item Wrote useful bash scripts for frequently done tasks.
-    \item Researched into batching data which unfortunately we could not get to work.
   \end{itemize} &
 
   \begin{itemize}
