--- a/misc/bib.bib
+++ b/misc/bib.bib
@@ -41,7 +41,10 @@
   title = {{S}tack {O}verflow {P}rofiler {Q}uestion}
 }
 
-
+@misc{threads_atomics,
+  howpublished = {\url{http://mc.stanford.edu/cgi-bin/images/3/34/Darve_cme343_cuda_3.pdf}},
+  title = {{CUDA} {T}hreads {A}nd {A}tomics}
+}
 
 @misc{lec7,
   Author = {George Rokos},
