--- a/effectiveness/gpu.tex
+++ b/effectiveness/gpu.tex
@@ -11,7 +11,7 @@ Once the verticies have been colored and the code migrated to the GPU results we
 \end{tabular} \end{figure}
 
 As we can see, moving the code to the GPU and parallelising it through colouring makes a huge difference to the performance of this algorithm. Since the GPU has 8 cores and 2 special purpose function units it can run up to 16 threads in parallel and because each vertex smoothing is performed on a single thread it can make use of this expanded parallelism. The i5 CPU on the other hand only has four cores of which two threads can be run at a time so if we had parallelised for the CPU the liklihood is the result would not have been as good. There are normally a great many more than sixteen threads that need running during a color iteration which means that we will have many warps (32 threads); when one warp is blocked, the scheduler can schedule another to run making full use of the GPU's resources and reducing any idle time.
-The trade off here is that individual thread completion times are decreased me we have increased throughput through the system, which benefits this algorithm significantly.
+The trade off here is that individual thread completion times are decreased. We have increased throughput of the system, which benefits this algorithm significantly.
 
 From profiling the small.vtk run we can gather the following statistics as a benchmark to start from:\\
 \begin{figure}[H]\centering \begin{tabular}{ l | l | l | l}
