--- a/hypothesis/hypothesis.tex
+++ b/hypothesis/hypothesis.tex
@@ -19,3 +19,4 @@ It is however, not enough to stop at just running the code on our GPU. We must a
 \input{hypothesis/branching}
 \input{hypothesis/pinning}
 \input{hypothesis/thread_size}
+\input{hypothesis/batch_transfer}
