--- a/group_work/group_work.tex
+++ b/group_work/group_work.tex
@@ -8,7 +8,7 @@
     \item Wrote colouring and reordering algorithms.
     \item Contributed to porting the code to the GPU using CUDA.
     \item Implemented the removal of corner nodes.
-    \item Implemented the pinning of Mesh and color data.
+    \item Implemented the pinning of Mesh and colour data.
     \item Wrote useful Python scripts to parse profiler results and benchmark results.
   \end{itemize} &
 
