--- a/introduction/software.tex
+++ b/introduction/software.tex
@@ -1,5 +1,5 @@
 \subsubsection*{Software}
-The softwares we have made use of on both lab machines and cx1 are:
+The software we have made use of on both lab machines and cx1 are:
 \begin{itemize}
   \item \textbf{NVIDIA CUDA Compiler (NVCC)} which deals with the compilation and transfer of CUDA code. The code is divided into CPU-bound and GPU-bound code, delegating the compilation of the former to a C/C++ compiler, and compiling the latter. Finally, the compiled binaries are transferred to their respective destinations.
   \item \textbf{CUDA Command Line Profiler}
