--- a/effectiveness/effectiveness.tex
+++ b/effectiveness/effectiveness.tex
@@ -6,3 +6,4 @@ Experimentally we will run our results three times and average them to deduce wh
 \input{effectiveness/reordering}
 \input{effectiveness/pinning}
 \input{effectiveness/thread_size}
+\input{effectiveness/batch_transfer}
