--- a/effectiveness/thread_size.tex
+++ b/effectiveness/thread_size.tex
@@ -22,4 +22,4 @@ medium & 0.445 & 0.125 & 0.500 \\
 \hline
 \end{tabular} \end{figure}
 
-This shows that with our sweet spot of 128 threads per block we achieve a much better occupancy than in previous tests (using a value of 32). 
+This shows that with our sweet spot of 128 threads per block we achieve a much better occupancy than in previous tests (using a value of 32), which had an average occupancy of 0.22.
