--- a/misc/bib.bib
+++ b/misc/bib.bib
@@ -15,6 +15,11 @@
   title = {{H}ow {T}o {O}ptimise {D}ata {T}ransfers {I}n {CUDA} {C/C++}}
 }
 
+@misc{transfer2,
+  howpublished = {\url{http://blog.theincredibleholk.org/blog/2012/11/29/a-look-at-gpu-memory-transfer/}},
+  title = {{A} {L}ook {A}t {GPU} {M}emory {T}ransfer}
+}
+
 @misc{best_practices,
   howpublished = {\url{http://docs.nvidia.com/cuda/cuda-c-best-practices-guide/index.html}},
   title = {{CUDA} {C} {B}est {P}ractices {G}uide}
