Update group work, since we've got batching in I think we no longer need to say it didnt work

--- a/group_work/group_work.tex
+++ b/group_work/group_work.tex
@@ -4,6 +4,7 @@
   Sarah & Jack & Wael\\
   \hline
   \hline
+  % Sarah
   \begin{itemize}
     \item Wrote colouring and reordering algorithms.
     \item Contributed to porting the code to the GPU using CUDA.
@@ -12,16 +13,18 @@
     \item Wrote useful Python scripts to parse profiler results and benchmark results.
   \end{itemize} &
 
+  %Jack
   \begin{itemize}
     \item Contributed to porting the code to the GPU using CUDA.
-    \item Implemented and researched threads per block.
-    \item Implemented and researched batch data transfer from host to device.
-    \item Wrote useful bash scripts for cx1 before we decided to scrap the use of it.
+    \item Implemented finding the threads per block sweet spot.
+    \item Contributed to implementing batch data transfer from host to device.
+    \item Wrote useful bash scripts for both labs (and cx1 before we decided to scrap the use of it).
   \end{itemize} &
 
+  % Wael
   \begin{itemize}
     \item Implemented a SQLite 3 database for result storage.
-    \item \ldots
+    \item Contributed to implementing batch data transfer from host to device.
   \end{itemize} \\
   \hline
 \end{tabular}
